# bdd-tablex

./: .gitignore  LICENSE  README.md  pyproject.toml  zensical.toml
.github/workflows/: ci.yml
docs/: architecture.md  index.md  use-cases-and-positioning.md
docs/learn/: compiler-model.md  datatables.md  row-vs-column.md  source-aware-errors.md  table-contracts.md  typed-records.md
docs/reference/: cli.md  dsl.md  errors.md  fields.md  index.md  parsers.md  public-api.md  schema.md  source-context.md  transformers.md
docs/start/: install.md  quickstart.md  why.md
docs/stylesheets/: extra.css
docs_site/: 404.html  index.html  search.js  search.json  sitemap.xml
docs_site/javascripts/: extra.js
docs_site/learn/: compiler-model.html  datatables.html  row-vs-column.html  source-aware-errors.html  table-contracts.html  typed-records.html
docs_site/reference/: cli.html  dsl.html  errors.html  fields.html  index.html  parsers.html  public-api.html  schema.html  source-context.html  transformers.html
docs_site/start/: install.html  why.html  (+1 more)
examples/: README.md
explainer_docs/: README.md  api.md  concepts-and-lifecycle.md  detailed-feature-guide.md  doc_plan.md  examples-map.md  feature-guide.md  project-overview.md
tests/: test_annotations.py  test_cell_dsl.py  test_checker.py  test_column_table.py  test_composition.py  test_custom_parsers.py  test_defaults_aliases_policies.py  test_error_collection.py  test_errors.py  test_field_components.py  test_fields.py  test_functional_api.py  test_group_expansion.py  test_introspection.py  test_output_factory.py  test_output_models.py  test_package_metadata.py  test_parsers.py  test_pydantic_output.py  test_pytest_plugin.py  test_record_sources.py  test_record_validation.py  test_references.py  test_row_table.py  test_table_data.py  test_table_transform.py  test_table_validation.py  test_variants.py
(+329 files in other folders)
