[project]
name = "bdd-tablex"
version = "0.1.0"
description = "Typed, validated schemas for BDD data tables"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = []
keywords = ["bdd", "pytest", "pytest-bdd", "gherkin", "testing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-bdd>=8.0",
]
pydantic = [
    "pydantic>=2.0",
]
cli = [
    "gherkin-official>=29.0",
]

[project.scripts]
bdd-tablex = "bdd_tablex.cli:main"

[dependency-groups]
dev = [
    "mypy>=1.11",
    "pytest>=8.0",
    "pytest-bdd>=8.0",
    "pydantic>=2.0",
    "ruff>=0.11",
]

[project.entry-points.pytest11]
bdd_tablex = "bdd_tablex.pytest_plugin"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bdd_tablex"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests", "examples"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "D"]
ignore = ["D105", "D107", "D203", "D213"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D"]
"examples/**" = ["D"]

[tool.mypy]
python_version = "3.10"
mypy_path = "src"
check_untyped_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
exclude = ["examples/", "tests/"]
